correction contrast

--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ a:hover {
 }
 
 .d-bloc {
-  color: rgba(255, 255, 255, 0.7);
+  color: black;
 }
 
 .d-bloc button:hover {
@@ -653,7 +653,7 @@ label,
 a {
   font-family: "helvetica";
   font-weight: 400;
-  color: #575757 !important;
+  color: black !important;
 }
 
 .container {
@@ -739,6 +739,10 @@ h4 {
 
 .white {
   color: #ffffff !important;
+}
+
+.black {
+  color: black;
 }
 
 .portfolio-thumb {
